Lang_51/evosuite/original/evosuite-report-org/test_build_org.log
cd /home/liumengjiao/Desktop/CI/Benchmark/../bugs/Lang_51_buggy && timeout 300000 javac -cp  /home/liumengjiao/Desktop/defects4j/framework/lib/test_generation/generation/evosuite-current.jar:target/classes/  /home/liumengjiao/Desktop/CI/Evosuite/Lang_51/Lang/evosuite/3/org/apache/commons/lang/BooleanUtils_ESTest_scaffolding.java /home/liumengjiao/Desktop/CI/Evosuite/Lang_51/Lang/evosuite/3/org/apache/commons/lang/BooleanUtils_ESTest.java >> evosuite-report-org/test_build_org.log 2>&1

/home/liumengjiao/Desktop/CI/Evosuite/Lang_51/Lang/evosuite/3/org/apache/commons/lang/BooleanUtils_ESTest.java:84: error: cannot find symbol
      boolean boolean1 = BooleanUtils.isNotTrue(boolean0);
                                     ^
  symbol:   method isNotTrue(Boolean)
  location: class BooleanUtils
/home/liumengjiao/Desktop/CI/Evosuite/Lang_51/Lang/evosuite/3/org/apache/commons/lang/BooleanUtils_ESTest.java:90: error: cannot find symbol
      boolean boolean0 = BooleanUtils.isTrue((Boolean) null);
                                     ^
  symbol:   method isTrue(Boolean)
  location: class BooleanUtils
/home/liumengjiao/Desktop/CI/Evosuite/Lang_51/Lang/evosuite/3/org/apache/commons/lang/BooleanUtils_ESTest.java:97: error: cannot find symbol
      boolean boolean1 = BooleanUtils.isNotTrue(boolean0);
                                     ^
  symbol:   method isNotTrue(Boolean)
  location: class BooleanUtils
/home/liumengjiao/Desktop/CI/Evosuite/Lang_51/Lang/evosuite/3/org/apache/commons/lang/BooleanUtils_ESTest.java:104: error: cannot find symbol
      boolean boolean1 = BooleanUtils.isNotFalse(boolean0);
                                     ^
  symbol:   method isNotFalse(Boolean)
  location: class BooleanUtils
/home/liumengjiao/Desktop/CI/Evosuite/Lang_51/Lang/evosuite/3/org/apache/commons/lang/BooleanUtils_ESTest.java:110: error: cannot find symbol
      boolean boolean0 = BooleanUtils.isNotFalse((Boolean) null);
                                     ^
  symbol:   method isNotFalse(Boolean)
  location: class BooleanUtils
/home/liumengjiao/Desktop/CI/Evosuite/Lang_51/Lang/evosuite/3/org/apache/commons/lang/BooleanUtils_ESTest.java:117: error: cannot find symbol
      boolean boolean1 = BooleanUtils.isNotFalse(boolean0);
                                     ^
  symbol:   method isNotFalse(Boolean)
  location: class BooleanUtils
6 errors
